--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,12 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended",
-    "airbnb"
+    "plugin:react/recommended"
   ],
   "overrides": [
   ],
   "parserOptions": {
-    "ecmaVersion": "latest",
+    "ecmaVersion": 13,
     "sourceType": "module"
   },
   "plugins": [
