feat: working with async/await inside useEffect

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "airbnb"
   ],
   "overrides": [
   ],
@@ -13,12 +15,16 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react"
+    "react",
+    "react-hooks"
   ],
   "rules": {
     "react/jsx-filename-extension": [
       1, { "extensions": [".js", ".jsx"] }
     ],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/prefer-default-export": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
