feat: handling the errors returned by the api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
   },
   "extends": [
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "airbnb"
+    "plugin:react-hooks/recommended"
   ],
   "overrides": [
   ],
